Hide `WrappedConfig.setWrappedConfig()`